--- a/package.json
+++ b/package.json
@@ -31,32 +31,31 @@
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
     "@types/react": "^16.7.13",
-    "keyboardjs": "^2.5.1",
-    "nano-css": "^3.4.0",
-    "react-wait": "^0.3.0",
-    "rebound": "^0.1.0",
     "throttle-debounce": "^2.0.1",
+    "nano-css": "^3.4.0",
+    "rebound": "^0.1.0",
     "ts-easing": "^0.1.0",
+    "use-onclickoutside": "^0.1.0",
     "use-callbag": "^0.1.2",
-    "use-onclickoutside": "^0.1.0"
+    "react-wait": "^0.3.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^3.0.1",
-    "@semantic-release/git": "^7.0.5",
-    "@semantic-release/npm": "^5.0.5",
     "@storybook/react": "^3.4.11",
-    "babel-core": "^6.26.3",
-    "callbag-interval": "^1.1.0",
-    "gh-pages": "^2.0.1",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
-    "react-spring": "^6.1.4",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "semantic-release": "^15.10.6",
-    "ts-loader": "3",
+    "typescript": "^3.2.2",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "ts-loader": "3",
+    "babel-core": "^6.26.3",
+    "rimraf": "^2.6.2",
+    "gh-pages": "^2.0.1",
+    "semantic-release": "^15.10.6",
+    "@semantic-release/changelog": "^3.0.1",
+    "@semantic-release/npm": "^5.0.5",
+    "@semantic-release/git": "^7.0.5",
+    "rxjs": "^6.3.3",
+    "callbag-interval": "^1.1.0",
+    "react-spring": "^6.1.4"
   },
   "peerDependencies": {
     "react": "16.7.0-alpha.2",
