--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "6.0.0",
+  "version": "5.13.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "files": [
@@ -30,9 +30,7 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
-    "@types/react": "^16.8.2"
-  },
-  "devDependencies": {
+    "@types/react": "^16.8.2",
     "keyboardjs": "^2.5.1",
     "nano-css": "^5.0.0",
     "react-wait": "^0.3.0",
@@ -40,7 +38,9 @@
     "throttle-debounce": "^2.0.1",
     "ts-easing": "^0.2.0",
     "use-callbag": "^0.2.0",
-    "use-onclickoutside": "^0.3.0",
+    "use-onclickoutside": "^0.3.0"
+  },
+  "devDependencies": {
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@semantic-release/npm": "5.1.4",
