--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "5.14.0",
+  "version": "5.13.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "files": [
@@ -30,25 +30,25 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "keyboardjs": "^2.5.1",
     "nano-css": "^5.0.0",
     "react-wait": "^0.3.0",
-    "rebound": "^0.1.0",
     "throttle-debounce": "^2.0.1",
     "ts-easing": "^0.2.0",
-    "use-callbag": "^0.2.0",
     "use-onclickoutside": "^0.3.0"
   },
   "devDependencies": {
+    "@types/react": "^16.8.2",
+    "keyboardjs": "^2.5.1",
+    "rebound": "^0.1.0",
+    "use-onclickoutside": "^0.3.0",
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@semantic-release/npm": "5.1.4",
-    "@storybook/addon-actions": "5.0.5",
-    "@storybook/addon-knobs": "5.0.5",
-    "@storybook/addon-notes": "5.0.5",
-    "@storybook/addon-options": "5.0.5",
-    "@storybook/react": "5.0.5",
+    "@storybook/addon-actions": "5.0.3",
+    "@storybook/addon-knobs": "5.0.3",
+    "@storybook/addon-notes": "5.0.3",
+    "@storybook/addon-options": "5.0.3",
+    "@storybook/react": "5.0.3",
     "babel-core": "6.26.3",
     "callbag-interval": "1.1.0",
     "fork-ts-checker-webpack-plugin": "1.0.0",
