--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "6.0.0",
+  "version": "5.16.1",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "files": [
@@ -30,15 +30,17 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
-    "nano-css": "^5.1.0",
-    "react-wait": "^0.3.0",
-    "throttle-debounce": "^2.0.1",
-    "ts-easing": "^0.2.0"
-  },
-  "devDependencies": {
     "@types/react": "^16.8.2",
     "keyboardjs": "^2.5.1",
+    "nano-css": "^5.0.0",
+    "react-wait": "^0.3.0",
     "rebound": "^0.1.0",
+    "throttle-debounce": "^2.0.1",
+    "ts-easing": "^0.2.0",
+    "use-callbag": "^0.2.0",
+    "use-onclickoutside": "^0.3.0"
+  },
+  "devDependencies": {
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@semantic-release/npm": "5.1.4",
@@ -48,6 +50,7 @@
     "@storybook/addon-options": "5.0.5",
     "@storybook/react": "5.0.5",
     "babel-core": "6.26.3",
+    "callbag-interval": "1.1.0",
     "fork-ts-checker-webpack-plugin": "1.0.0",
     "gh-pages": "2.0.1",
     "markdown-loader": "5.0.0",
