--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@storybook/addon-options": "5.0.5",
     "@storybook/react": "5.0.5",
     "babel-core": "6.26.3",
-    "fork-ts-checker-webpack-plugin": "1.0.1",
+    "fork-ts-checker-webpack-plugin": "1.0.0",
     "gh-pages": "2.0.1",
     "markdown-loader": "5.0.0",
     "react": "16.8.4",
@@ -75,6 +75,10 @@
     }
   },
   "release": {
+    "branches": ["master", {
+      "name": "next",
+      "prerelease": "rc"
+    }],
     "verifyConditions": [
       "@semantic-release/changelog",
       "@semantic-release/npm",
