--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "7.3.1",
+  "version": "7.5.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -36,6 +36,7 @@
   "dependencies": {
     "copy-to-clipboard": "^3.1.0",
     "nano-css": "^5.1.0",
+    "react-fast-compare": "^2.0.4",
     "react-wait": "^0.3.0",
     "screenfull": "^4.1.0",
     "throttle-debounce": "^2.0.1",
@@ -71,7 +72,7 @@
     "semantic-release": "15.13.3",
     "ts-loader": "5.3.3",
     "ts-node": "8.0.3",
-    "typescript": "3.4.1"
+    "typescript": "3.4.2"
   },
   "config": {
     "commitizen": {
