--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "start": "yarn storybook",
-    "test": "jest",
+    "test": "echo hmm...",
     "build:cjs": "tsc",
     "build:es": "tsc -m esNext --outDir esm",
     "build": "yarn build:cjs && yarn build:es",
@@ -49,9 +49,6 @@
     "rebound": "*"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@semantic-release/npm": "5.1.4",
@@ -60,19 +57,15 @@
     "@storybook/addon-notes": "5.0.6",
     "@storybook/addon-options": "5.0.6",
     "@storybook/react": "5.0.6",
-    "@types/jest": "^24.0.11",
     "@types/react": "16.8.13",
     "babel-core": "6.26.3",
     "fork-ts-checker-webpack-plugin": "1.0.1",
     "gh-pages": "2.0.1",
-    "jest": "^24.7.1",
     "keyboardjs": "2.5.1",
     "markdown-loader": "5.0.0",
     "react": "16.8.4",
     "react-dom": "16.8.4",
-    "react-hooks-testing-library": "^0.4.0",
     "react-spring": "6.1.10",
-    "react-testing-library": "^6.1.2",
     "rebound": "0.1.0",
     "rimraf": "2.6.3",
     "rxjs": "6.4.0",
