--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
+  "sideEffects": false,
   "files": [
     "lib/",
     "esm/"
@@ -97,7 +98,7 @@
     "tslint-eslint-rules": "5.4.0",
     "tslint-plugin-prettier": "2.0.1",
     "tslint-react": "4.0.0",
-    "typescript": "3.4.5"
+    "typescript": "3.5.1"
   },
   "config": {
     "commitizen": {
@@ -128,9 +129,5 @@
       "tslint --fix -t verbose",
       "git add"
     ]
-  },
-  "volta": {
-    "node": "10.16.0",
-    "yarn": "1.16.0"
   }
 }
