--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "9.2.0",
+  "version": "9.3.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -131,5 +131,9 @@
       "tslint --fix -t verbose",
       "git add"
     ]
+  },
+  "volta": {
+    "node": "10.16.0",
+    "yarn": "1.16.0"
   }
 }
