--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-use",
-  "version": "8.1.2",
+  "version": "9.3.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
+  "sideEffects": false,
   "files": [
     "lib/",
     "esm/"
@@ -58,48 +59,48 @@
     "rebound": "*"
   },
   "devDependencies": {
-    "@babel/core": "7.4.3",
-    "@babel/preset-env": "7.4.3",
+    "@babel/core": "7.4.5",
+    "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "babel-plugin-dynamic-import-node": "2.2.0",
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
-    "@semantic-release/npm": "5.1.4",
-    "@storybook/addon-actions": "5.0.8",
-    "@storybook/addon-knobs": "5.0.8",
-    "@storybook/addon-notes": "5.0.8",
-    "@storybook/addon-options": "5.0.8",
-    "@storybook/react": "5.0.8",
-    "@types/jest": "24.0.11",
-    "@types/react": "16.8.13",
+    "@semantic-release/npm": "5.1.7",
+    "@storybook/addon-actions": "5.0.11",
+    "@storybook/addon-knobs": "5.0.11",
+    "@storybook/addon-notes": "5.0.11",
+    "@storybook/addon-options": "5.0.11",
+    "@storybook/react": "5.0.11",
+    "@types/jest": "24.0.13",
+    "@types/react": "16.8.19",
     "babel-core": "6.26.3",
-    "babel-loader": "8.0.5",
-    "fork-ts-checker-webpack-plugin": "1.0.2",
+    "babel-loader": "8.0.6",
+    "fork-ts-checker-webpack-plugin": "1.3.4",
     "gh-pages": "2.0.1",
     "husky": "1.3.1",
-    "jest": "24.7.1",
+    "jest": "24.8.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "8.1.5",
+    "lint-staged": "8.1.7",
     "markdown-loader": "5.0.0",
-    "prettier": "1.17.0",
+    "prettier": "1.17.1",
     "react": "16.8.4",
     "react-dom": "16.8.4",
-    "react-hooks-testing-library": "0.4.0",
+    "react-hooks-testing-library": "0.4.1",
     "react-spring": "6.1.10",
     "rebound": "0.1.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
     "rimraf": "2.6.3",
-    "rxjs": "6.4.0",
-    "semantic-release": "15.13.3",
-    "ts-loader": "5.3.3",
-    "ts-node": "8.1.0",
-    "tslint": "5.15.0",
+    "rxjs": "6.5.2",
+    "semantic-release": "15.13.12",
+    "ts-loader": "5.4.5",
+    "ts-node": "8.2.0",
+    "tslint": "5.16.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-eslint-rules": "5.4.0",
     "tslint-plugin-prettier": "2.0.1",
     "tslint-react": "4.0.0",
-    "typescript": "3.4.3"
+    "typescript": "3.5.1"
   },
   "config": {
     "commitizen": {
@@ -130,5 +131,9 @@
       "tslint --fix -t verbose",
       "git add"
     ]
+  },
+  "volta": {
+    "node": "10.16.0",
+    "yarn": "1.16.0"
   }
 }
