--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "9.7.1",
+  "version": "9.8.1",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -30,7 +30,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint:types && lint-staged"
+      "pre-commit": "yarn lint:types && lint-staged",
+      "pre-push": "yarn lint && yarn clean && yarn build && yarn test"
     }
   },
   "author": "@streamich",
@@ -66,15 +67,15 @@
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "@semantic-release/changelog": "3.0.4",
-    "@semantic-release/git": "7.0.12",
-    "@semantic-release/npm": "5.1.9",
+    "@semantic-release/git": "7.0.16",
+    "@semantic-release/npm": "5.1.13",
     "@storybook/addon-actions": "5.1.9",
     "@storybook/addon-knobs": "5.1.9",
     "@storybook/addon-notes": "5.1.9",
     "@storybook/addon-options": "5.1.9",
     "@storybook/react": "5.1.9",
     "@types/jest": "24.0.15",
-    "@types/react": "16.8.22",
+    "@types/react": "16.8.23",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
     "fork-ts-checker-webpack-plugin": "1.3.7",
@@ -88,13 +89,13 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hooks-testing-library": "0.4.1",
-    "react-spring": "8.0.25",
+    "react-spring": "8.0.27",
     "rebound": "0.1.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
     "rimraf": "2.6.3",
     "rxjs": "6.5.2",
-    "semantic-release": "15.13.16",
+    "semantic-release": "15.13.18",
     "ts-loader": "5.4.5",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
