--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "storybook:build": "build-storybook",
     "storybook:upload": "gh-pages -d storybook-static",
     "storybook:clean": "rimraf storybook-static",
-    "release": "semantic-release",
-    "postinstall": "opencollective-postinstall || true"
+    "release": "semantic-release"
   },
   "husky": {
     "hooks": {
@@ -48,7 +47,6 @@
   "dependencies": {
     "copy-to-clipboard": "^3.1.0",
     "nano-css": "^5.1.0",
-    "opencollective-postinstall": "^2.0.2",
     "react-fast-compare": "^2.0.4",
     "react-wait": "^0.3.0",
     "screenfull": "^4.1.0",
@@ -140,9 +138,5 @@
   "volta": {
     "node": "10.16.0",
     "yarn": "1.16.0"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/react-use"
   }
 }
