--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "9.11.0",
+  "version": "9.11.2",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -86,7 +86,7 @@
     "keyboardjs": "2.5.1",
     "lint-staged": "8.2.1",
     "markdown-loader": "5.0.0",
-    "opencollective-postinstall": "^2.0.2",
+    "opencollective-postinstall": "2.0.2",
     "prettier": "1.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
