--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "9.12.0",
+  "version": "9.11.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -26,8 +26,7 @@
     "storybook:build": "build-storybook",
     "storybook:upload": "gh-pages -d storybook-static",
     "storybook:clean": "rimraf storybook-static",
-    "release": "semantic-release",
-    "postinstall": "opencollective-postinstall || true"
+    "release": "semantic-release"
   },
   "husky": {
     "hooks": {
@@ -46,6 +45,7 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
+    "@types/react-wait": "^0.3.0",
     "copy-to-clipboard": "^3.1.0",
     "nano-css": "^5.1.0",
     "react-fast-compare": "^2.0.4",
@@ -55,15 +55,18 @@
     "ts-easing": "^0.2.0"
   },
   "peerDependencies": {
+    "keyboardjs": "*",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "rebound": "*"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "babel-plugin-dynamic-import-node": "2.3.0",
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
     "@semantic-release/npm": "5.1.13",
@@ -76,15 +79,13 @@
     "@types/react": "16.8.23",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
-    "babel-plugin-dynamic-import-node": "2.3.0",
-    "fork-ts-checker-webpack-plugin": "1.4.3",
+    "fork-ts-checker-webpack-plugin": "1.4.0",
     "gh-pages": "2.0.1",
-    "husky": "3.0.0",
+    "husky": "1.3.1",
     "jest": "24.8.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "9.2.0",
+    "lint-staged": "8.2.1",
     "markdown-loader": "5.0.0",
-    "opencollective-postinstall": "2.0.2",
     "prettier": "1.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -96,7 +97,7 @@
     "rimraf": "2.6.3",
     "rxjs": "6.5.2",
     "semantic-release": "15.13.18",
-    "ts-loader": "6.0.4",
+    "ts-loader": "5.4.5",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
@@ -138,9 +139,5 @@
   "volta": {
     "node": "10.16.0",
     "yarn": "1.16.0"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/react-use"
   }
 }
