--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "9.11.2",
+  "version": "10.1.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -46,6 +46,7 @@
   },
   "homepage": "https://github.com/streamich/react-use#readme",
   "dependencies": {
+    "@types/react-wait": "^0.3.0",
     "copy-to-clipboard": "^3.1.0",
     "nano-css": "^5.1.0",
     "react-fast-compare": "^2.0.4",
@@ -55,15 +56,13 @@
     "ts-easing": "^0.2.0"
   },
   "peerDependencies": {
-    "keyboardjs": "*",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "rebound": "*"
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "7.5.4",
+    "@babel/core": "7.5.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.5.4",
+    "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
     "@semantic-release/changelog": "3.0.4",
@@ -74,32 +73,31 @@
     "@storybook/addon-notes": "5.1.9",
     "@storybook/addon-options": "5.1.9",
     "@storybook/react": "5.1.9",
-    "@testing-library/react-hooks": "^1.1.0",
     "@types/jest": "24.0.15",
     "@types/react": "16.8.23",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
-    "fork-ts-checker-webpack-plugin": "1.4.2",
+    "fork-ts-checker-webpack-plugin": "1.4.3",
     "gh-pages": "2.0.1",
-    "husky": "1.3.1",
+    "husky": "3.0.0",
     "jest": "24.8.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "8.2.1",
+    "lint-staged": "9.2.0",
     "markdown-loader": "5.0.0",
     "opencollective-postinstall": "2.0.2",
     "prettier": "1.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-hooks-testing-library": "0.4.1",
     "react-spring": "8.0.27",
-    "react-test-renderer": "^16.8.6",
     "rebound": "0.1.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
     "rimraf": "2.6.3",
     "rxjs": "6.5.2",
     "semantic-release": "15.13.18",
-    "ts-loader": "5.4.5",
+    "ts-loader": "6.0.4",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
