--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "10.1.0",
+  "version": "10.3.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -26,8 +26,7 @@
     "storybook:build": "build-storybook",
     "storybook:upload": "gh-pages -d storybook-static",
     "storybook:clean": "rimraf storybook-static",
-    "release": "semantic-release",
-    "postinstall": "opencollective-postinstall || true"
+    "release": "semantic-release"
   },
   "husky": {
     "hooks": {
@@ -80,12 +79,11 @@
     "babel-plugin-dynamic-import-node": "2.3.0",
     "fork-ts-checker-webpack-plugin": "1.4.3",
     "gh-pages": "2.0.1",
-    "husky": "3.0.0",
+    "husky": "3.0.1",
     "jest": "24.8.0",
     "keyboardjs": "2.5.1",
-    "lint-staged": "9.2.0",
+    "lint-staged": "9.2.1",
     "markdown-loader": "5.0.0",
-    "opencollective-postinstall": "2.0.2",
     "prettier": "1.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
