--- a/package.json
+++ b/package.json
@@ -72,14 +72,15 @@
     "@storybook/addon-notes": "5.1.9",
     "@storybook/addon-options": "5.1.9",
     "@storybook/react": "5.1.9",
-    "@types/jest": "24.0.15",
+    "@testing-library/react-hooks": "^1.1.0",
+    "@types/jest": "24.0.16",
     "@types/react": "16.8.23",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "fork-ts-checker-webpack-plugin": "1.4.3",
     "gh-pages": "2.0.1",
-    "husky": "3.0.1",
+    "husky": "3.0.2",
     "jest": "24.8.0",
     "keyboardjs": "2.5.1",
     "lint-staged": "9.2.1",
@@ -87,8 +88,8 @@
     "prettier": "1.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-hooks-testing-library": "0.4.1",
     "react-spring": "8.0.27",
+    "react-test-renderer": "^16.8.6",
     "rebound": "0.1.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
