--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "@storybook/addon-notes": "5.1.10",
     "@storybook/addon-options": "5.1.10",
     "@storybook/react": "5.1.10",
-    "@testing-library/react-hooks": "^1.1.0",
-    "@types/jest": "24.0.16",
+    "@testing-library/react-hooks": "1.1.0",
+    "@types/jest": "24.0.17",
     "@types/react": "16.8.23",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
@@ -89,7 +89,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-spring": "8.0.27",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "16.8.6",
     "rebound": "0.1.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
