--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use",
-  "version": "10.6.2",
+  "version": "10.7.0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
@@ -73,8 +73,8 @@
     "@storybook/addon-options": "5.1.11",
     "@storybook/react": "5.1.11",
     "@testing-library/react-hooks": "2.0.1",
-    "@types/jest": "24.0.17",
-    "@types/react": "16.8.23",
+    "@types/jest": "24.0.18",
+    "@types/react": "16.9.2",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
@@ -86,6 +86,7 @@
     "lint-staged": "9.2.3",
     "markdown-loader": "5.1.0",
     "prettier": "1.18.2",
+    "raf-stub": "^3.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-spring": "8.0.27",
